@@ -7,6 +7,10 @@ collections.
 
 ## [1.1.2] - 2023-01-23
 
+### Added
+
+- Remember collection open/closed state after closing the site.
+
 ### Fixed
 
 - Overall percentage text squashed on small screens.
